--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   },
   "devDependencies": {},
   "author": "Bill Keller, NYCDA",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/billkeller/gulp-sample"
+  }
 }
