--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "browser-sync": "^2.6.5",
     "gulp": "^3.8.11",
     "gulp-sass": "^1.3.3",
-    "gulp-watch": "^4.2.4"
+    "gulp-watch": "^4.2.4",
+    "gulp-replace": "^0.5.3"
   },
   "devDependencies": {},
   "author": "Bill Keller, NYCDA",
