--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "week-14-lecture-1-gulp",
+  "name": "scrabblephilly",
   "version": "1.0.0",
-  "description": "Sample Gulp file and common Gulp usage",
+  "description": "Scrabble Philly website 2.0",
   "main": "index.html",
   "dependencies": {
     "browser-sync": "^2.6.5",
@@ -11,10 +11,13 @@
     "gulp-replace": "^0.5.3"
   },
   "devDependencies": {},
-  "author": "Bill Keller, NYCDA",
+  "author": "Eliza",
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/billkeller/gulp-sample"
+    "url": ""
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
